public/style.css
@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap"); /* main */

/* GLOBAL */
:root {
	--main-color: #cd5c5c;

	--dark-shade: #0e0e0e;
	--dark-shade-m1: #232323;

	--light-gray: #f2f2f2;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	text-decoration: none;
	font-family: "Montserrat", sans-serif;
	overflow-wrap: break-word;
	scroll-behavior: smooth;
}

body,
html {
	height: 100vh;
	background-color: var(--dark-shade);
}

body {
	overflow-x: hidden;
	z-index: 0;
}

.action-btn {
	display: block;
	width: 100%;
	height: 50px;
	border: none !important;
	background: var(--main-color);
	color: white;
	outline: none;
	cursor: pointer;
	transition: 0.2s ease-in;
	opacity: 1;
	z-index: 5;
}

.action-btn:hover {
	opacity: 0.9;
}

.action-link {
	display: block;
	padding: 10px 0;
	border: none !important;
	background: var(--main-color);
	color: white;
	outline: none;
	cursor: pointer;
	transition: 0.2s ease-in;
	opacity: 1;
	z-index: 5;
	width: 250px;

	text-decoration: none;
	font-size: 24px;
	text-align: center;
}

.portfolio-link {
	margin-left: 21%;
	margin-top: 9%;
}

.action-link:hover {
	background: var(--light-gray) !important;
	color: var(--main-color) !important;
	text-decoration: none;
	font-weight: bold;
}

.action-link.inverted,
.action-btn.inverted {
	background: var(--light-gray) !important;
	color: var(--main-color) !important;
}

.action-link.inverted:hover,
.action-btn.inverted:hover {
	background: var(--dark-shade) !important;
	color: var(--main-color) !important;
	font-weight: bold;
}

.fp-table {
	display: flex !important;
}

input,
textarea {
	background-color: #e6e6e6 !important;
	font-weight: bold;
	color: var(--brand-blue-m2);
	box-sizing: border-box;
	border: 2px solid transparent !important;
	padding: 12px 15px;
	margin: 8px 0;
	width: 100%;
	transition: ease-in-out 0.3s;
}

input:focus,
textarea:focus,
input:-webkit-autofill:focus,
textarea:-webkit-autofill:focus,
select:-webkit-autofill:focus {
	outline: none !important;
	background-color: white !important;
}

/* Change Autocomplete styles in Chrome*/
input:-webkit-autofill,
textarea:-webkit-autofill,
select:-webkit-autofill {
	-webkit-text-fill-color: var(--dark-shade-m1) !important;
	border: 2px solid transparent !important;
	box-shadow: 0 0 0 30px #e6e6e6 inset !important;
	-webkit-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
	-moz-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
}

.control-label {
	font-size: 24px;
	color: var(--dark-shade);
	font-weight: bold;
}
/* END GLOBAL */

/* NAVBAR */
.navbar-brand {
	font-weight: bold;
	font-family: "Montserrat";
	font-size: 1.5em;
	margin-left: 3%;
	color: var(--light-gray) !important;
	transition: ease-in-out 0.3s; /* causes brand to slide in */
}

.navbar-brand:hover {
	color: var(--main-color) !important;
}

.navbar-dark {
	background-color: transparent !important;
}
/* END NAVBAR */

/* HOME */
#landing-section {
	background-repeat: no-repeat;
	background-image: url(/svg/background_landing.svg);
	/*background-size: cover;*/
	z-index: 2;
}

.main-section {
	height: 100vh;
}

.main-section.even {
	background-color: var(--main-color);
}

.main-section .hero {
	position: relative;
}

.main-section.hero h3 {
	font-size: 22px;
	color: var(--main-color);
	opacity: 0.85;
	margin-top: 10%;
	margin-left: 13%;
}

.main-section.hero h3 b {
	font-size: 28px;
}

.scroll-indicator {
	height: 140px;
}

.scroll-indicator::before {
	animation: bounce 1s ease infinite;
	bottom: 2rem;
	color: #fff;
	content: "╲╱";
	font-size: 2rem;
	height: 4rem;
	left: 50%;
	letter-spacing: -1px;
	line-height: 4rem;
	margin-left: -3rem;
	opacity: 0.8;
	position: absolute;
	text-align: center;
	width: 6rem;
}

@keyframes bounce {
	50% {
		transform: translateY(-25%);
	}
}

.freelancer-svg {
	width: 45%;
	position: absolute;
	left: 45%;
	top: 25%;
	z-index: 1;
}

.hero-title {
	font-size: 8rem;
	font-family: "Montserrat";
	font-weight: bold;
	color: var(--main-color);
	margin-left: 10%;
	margin-top: -25px;
	font-style: italic;
}

.main-section.even .hero-title {
	color: var(--dark-shade);
}

.hero-secondary-title {
	color: var(--main-color);
	opacity: 0.9;
	font-size: 3.5rem;
	width: 50%;
	margin-left: 13%;
	margin-top: -20px;
}

.skills-section-wrapper {
	width: 70%;
	margin: 25px auto 15px auto;
}

.skills-section {
}

.skills-text {
	text-align: center;
	color: var(--main-color);
	opacity: 0.95;
	font-size: 2em;
	margin-top: -25px;
}

.skills-section h2 {
	font-size: 3rem;
	color: var(--main-color);
	opacity: 0.95;
}

.skills-wrapper {
	width: 70%;
	margin: 25px auto;
	display: flex;
	justify-content: space-evenly;
	flex-wrap: wrap;
}

.skills-wrapper h1 {
	font-size: 75px;
	color: var(--dark-shade-m1);
}

.wrapper-icon {
	margin: auto 0;
	padding: 0 10px;
}

.wrapper-icon div {
	display: flex;
	align-items: center;
}

.wrapper-icon label {
	display: block;
	text-align: center;
	color: var(--light-gray);
}

.skill-icon {
	max-width: 100%;
	height: 80px;
	width: 80px;
	margin: auto;
}

.contact-footer {
	position: absolute;
	bottom: 0;
	width: 100%;
}

.contact-footer ul {
	list-style: none;
	display: flex;
	justify-content: center;
}

.contact-footer li {
	display: inline-block;
	font-size: 26px;
	font-weight: bold;
	margin: 0 15px;
}

/* END HOME */

/*
section.intro {
  background: rgb(4, 50, 61);
  padding-top: 10em;
  height: calc(100vh - 10em);
}
section.intro p {
  font-size: 2em;
  text-align: center;
  margin-top: 3em;
}

section.anim {
  background: #1989a6;
  padding: 12em;
  height: calc(100vh - 24em);
  overflow: hidden;
  position: relative;
}

section.anim h1 {
  position: absolute;
  font-size: 10em;
  text-transform: uppercase;
  margin: 0;
  z-index: 1;
  left: 15%;
}

section.anim p {
  position: absolute;
  font-size: 2em;
  width: 40%;
  z-index: 1;
  top: 500px;
}

section.anim .box1 {
  position: absolute;
  top: 0;
  left: 20%;
  z-index: 0;
  width: 800px;
  height: 800px;
  border: 30px solid #20a2c3;
  overflow: hidden;
  transform: rotateZ(65deg);
}

section.anim .box2 {
  position: absolute;
  top: 20%;
  left: 10%;
  z-index: 0;
  width: 200px;
  height: 200px;
  border: 30px solid rgba(255, 255, 255, 0.5);
  overflow: hidden;
}*/

